# maps-scraper

./: .env  Cargo.toml  docker-compose.yaml
migrations/: 20230415124038_CREATE_TABLES.sql
src/: database.rs  environment.rs  error.rs  main.rs
