[package]
name = "maps-scraper"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = { version = "0.4.22", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "uuid", "bigdecimal", "mysql", "chrono", "migrate", "offline"] }
thirtyfour = "0.31.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
